:sparkles: SecureDice 추가

--- a/packages/secure-random/package.json
+++ b/packages/secure-random/package.json
@@ -13,6 +13,7 @@
     },
     "description": "",
     "devDependencies": {
+        "@types/node": "^20.12.11",
         "rollup": "^4.17.2"
     },
     "dependencies": {
