--- a/packages/secure-dice/package.json
+++ b/packages/secure-dice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bokdol-soohyeon/secure-dice",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -25,7 +25,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/typescript": "^2.0.0",
     "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rollup-plugin-ts": "^3.4.5"
-  },
-  "type": "module"
+  }
 }
